feat: add favorite review for dietFood and restaurant